Fix bug #4593 (HTML menus / context menus are too narrow: keyboard shortcut wraps to second line in some places) -- see notes in bug for the sordid details...

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -247,8 +247,13 @@
     // Menu dropdown appearance
     .dropdown-menu {
         top: 34px; // Offset from top of menubar item
-
         margin-top: 0;
+        
+        // Fix for #4593: don't let narrow parent (menubar item) cause text wrap at the float boundary between
+        // the menu item label and keyboard shortcut. This takes away the "gotta get narrower" pressure.
+        width: -webkit-max-content;
+        width: -moz-max-content;
+
         background-color: @bc-white;
         .border-radius(0 0 3px 3px);
         box-shadow: @tc-dropdown-shadow;
